<?xml version="1.0"?>
<package>
  <name>nodebox_qt</name>
  <version>0.0.1</version>
  <description>NodeBox is a Mac OS X application that lets you create 2D visuals (static, animated or interactive) using Python programming code and export them as a PDF, an image or a Quicktime movie. NodeBox is free and well-documented. Frederik De Bleser, Tom De Smedt, Lucas Nijs (2002). NodeBox version 1.9.5 for Mac OS X. From NodeBoxQT, adapted as a rendering engine for RCommander by Hai Nguyen.</description>
  <author>Various (maintained by Hai Nguyen, haidai@gmail.com)</author>
  <maintainer email="futureneer@gmail.com">Kel Guerin</maintainer>
  <license>BSD</license>
  <url type="website">http://ros.org/wiki/nodebox_qt</url>

  <buildtool_depend>catkin</buildtool_depend>

</package>