<?xml version="1.0"?>
<package>
  <name>tf_broadcast_server</name>
  <version>0.0.1</version>
  <description>
      A server that lets clients post static transforms that will be 
    broadcasted as tf messages.</description>

  <maintainer email="futureneer@gmail.com">Kel Guerin</maintainer>
  <license>BSD</license>
  <url type="website">http://ros.org/wiki/tf_broadcast_server</url>
  <author>Hai Nguyen (haidai@gmail.com), Advisor: Charles C. Kemp (Georgia Tech)</author>
  
  <buildtool_depend>catkin</buildtool_depend>
  
  <build_depend>geometry_msgs</build_depend>
  <build_depend>tf</build_depend>

  <run_depend>geometry_msgs</run_depend>
  <run_depend>tf</run_depend>
  <run_depend>message_runtime</run_depend>
  <run_depend>std_msgs</run_depend>


</package>